--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pest = "2.5.4"
+pest = "2.0"
+pest_derive = "2.0"
 futures = "0.3"
 syn = "1.0"
-
 [dependencies.async-std]
 version = "1.6"
 features = ["attributes"]
